# pytest-adk

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: roll_die.json  user_prompt_from_loaded_session.py
examples/fields_planner/: __init__.py  agent.py
src/pytest_adk/: __init__.py  evaluation.py  plugin.py  prompt_template.py  resume.py  template.py
tests/: conftest.py  test_evaluation.py  test_plugin.py  test_prompt_template.py  test_resume.py  test_roll_die_export.py  test_template.py
tests/fixtures/: roll_die.json
