[project]
name = "pytest-adk"
version = "0.0.1"
description = "Add your description here"
authors = [
    { name = "ftnext", email = "takuyafjp+develop@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
