[project]
name = "pytest-adk"
version = "0.0.5"
description = "Helpers for testing agents with Google's adk-python"
readme = "README.md"
authors = [
    { name = "ftnext", email = "takuyafjp+develop@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "google-adk>=1.30.0",
    'tomli; python_version < "3.11"',
    "tomli-w",
]

[project.optional-dependencies]
jinja = [
    "jinja2",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "jinja2",
]

[project.scripts]
pytest-adk-eval-schema = "pytest_adk.template:main"

[project.entry-points.pytest11]
pytest_adk = "pytest_adk.plugin"

[tool.pytest]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project.urls]
Repository = "https://github.com/ftnext/pytest-adk"
